Fix audio paths and server configuration

--- a/src/index.html
+++ b/src/index.html
@@ -848,7 +848,7 @@
                                 <h4>"Walk in the Rain"</h4>
                                 <div class="music-track-genre">Electronic / Indie Pop</div>
                             </div>
-                            <button class="play-music-btn" data-track="/src/assets/music/walk_in_the_rain.mp3" data-title="Walk in the Rain">
+                            <button class="play-music-btn" data-track="/assets/music/walk_in_the_rain.mp3" data-title="Walk in the Rain">
                                 Play
                             </button>
                         </div>
@@ -869,7 +869,7 @@
                                 <h4>"The Monolithic Eschaton"</h4>
                                 <div class="music-track-genre">Epic / Orchestral</div>
                             </div>
-                            <button class="play-music-btn" data-track="/src/assets/music/The Monolithic Eschaton.mp3" data-title="The Monolithic Eschaton">
+                            <button class="play-music-btn" data-track="/assets/music/The Monolithic Eschaton.mp3" data-title="The Monolithic Eschaton">
                                 Play
                             </button>
                         </div>
@@ -890,7 +890,7 @@
                                 <h4>"Antelucan"</h4>
                                 <div class="music-track-genre">Electronic / Artcore</div>
                             </div>
-                            <button class="play-music-btn" data-track="/src/assets/music/Antelucan.mp3" data-title="Antelucan">
+                            <button class="play-music-btn" data-track="/assets/music/Antelucan.mp3" data-title="Antelucan">
                                 Play
                             </button>
                         </div>
@@ -911,7 +911,7 @@
                                 <h4>"Them Changes" (Remix)</h4>
                                 <div class="music-track-genre">Electronic / Future Bass / Glitch Hop</div>
                             </div>
-                            <button class="play-music-btn" data-track="/src/assets/music/them_change_remix.mp3" data-title="Them Changes (Remix)">
+                            <button class="play-music-btn" data-track="/assets/music/them_change_remix.mp3" data-title="Them Changes (Remix)">
                                 Play
                             </button>
                         </div>
