--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
     <title>Stone | Portfolio</title>
     <meta name="description" content="Technology × Music × Innovation">
     
+    <!-- 预加载音频文件 -->
+    <link rel="preload" href="./assets/music/walk_in_the_rain.mp3" as="audio">
+    <link rel="preload" href="./assets/music/The Monolithic Eschaton.mp3" as="audio">
+    <link rel="preload" href="./assets/music/Antelucan.mp3" as="audio">
+    <link rel="preload" href="./assets/music/them_change_remix.mp3" as="audio">
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -848,7 +854,7 @@
                                 <h4>"Walk in the Rain"</h4>
                                 <div class="music-track-genre">Electronic / Indie Pop</div>
                             </div>
-                            <button class="play-music-btn" data-track="/assets/music/walk_in_the_rain.mp3" data-title="Walk in the Rain">
+                            <button class="play-music-btn" data-track="./assets/music/walk_in_the_rain.mp3" data-title="Walk in the Rain">
                                 Play
                             </button>
                         </div>
@@ -869,7 +875,7 @@
                                 <h4>"The Monolithic Eschaton"</h4>
                                 <div class="music-track-genre">Epic / Orchestral</div>
                             </div>
-                            <button class="play-music-btn" data-track="/assets/music/The Monolithic Eschaton.mp3" data-title="The Monolithic Eschaton">
+                            <button class="play-music-btn" data-track="./assets/music/The Monolithic Eschaton.mp3" data-title="The Monolithic Eschaton">
                                 Play
                             </button>
                         </div>
@@ -890,7 +896,7 @@
                                 <h4>"Antelucan"</h4>
                                 <div class="music-track-genre">Electronic / Artcore</div>
                             </div>
-                            <button class="play-music-btn" data-track="/assets/music/Antelucan.mp3" data-title="Antelucan">
+                            <button class="play-music-btn" data-track="./assets/music/Antelucan.mp3" data-title="Antelucan">
                                 Play
                             </button>
                         </div>
@@ -911,7 +917,7 @@
                                 <h4>"Them Changes" (Remix)</h4>
                                 <div class="music-track-genre">Electronic / Future Bass / Glitch Hop</div>
                             </div>
-                            <button class="play-music-btn" data-track="/assets/music/them_change_remix.mp3" data-title="Them Changes (Remix)">
+                            <button class="play-music-btn" data-track="./assets/music/them_change_remix.mp3" data-title="Them Changes (Remix)">
                                 Play
                             </button>
                         </div>
