fix music genre description

--- a/src/index.html
+++ b/src/index.html
@@ -915,7 +915,7 @@
                         <div class="music-track-header">
                             <div class="music-track-info">
                                 <h4>"Them Changes" (Remix)</h4>
-                                <div class="music-track-genre">Electronic / Future Bass / Glitch Hop</div>
+                                <div class="music-track-genre">Electronic / Glitch Hop</div>
                             </div>
                             <button class="play-music-btn" data-track="./assets/music/them_change_remix.mp3" data-title="Them Changes (Remix)">
                                 Play
